# defexp

./: .gitignore  README.md  pyproject.toml  setup.py
cinclude/: voronoi_occupation_c.h
csrc/: voronoi_occupation.c
data/materials/: 3CSiC.json  4HSiC.json  Al2O3.json  C.json  W.json  WC.json
data/sim_info/: 3CSiC.json  C.json  W.json  WC.json
defexp/: __init__.py  defexp.py  defexp.voronoi_occupation.c  defexp.voronoi_occupation.pyx
defexp/csrc/: voronoi_occupation_c.c
defexp/lammpsin/: impact.lammpsin  relaxation.lammpsin
lammpsin/: impact.lammpsin  relaxation.lammpsin
materials/: 3CSiC.json  4HSiC.json  Al2O3.json  C.json  CaWO4.json  W.json  WC.json
potentials/: C_nordlund.tersoff  W.Nordlund.eam.fs  WCH.tersoff.zbl
run/: eloss.sh  relax.sh  setup.sh  thresholds.sh
samples/materials/: 3CSiC.json  4HSiC.json  Al2O3.json  C.json  CaWO4.json  NaI.json  W.json  WC.json
samples/potentials/: AlO.vashishta  W.DudarevDerlet.eam  W.Nordlund.eam.fs
samples/sim_info/: 3CSiC.json  4HSiC.json  Al2O3.json  C.json  NaI.json  W.json  WC.json
scripts/: dump_md.py  eloss.py  relax.py  thresholds.py
scripts/misc/: cone_sampler.py  eloss_fit.py  plot_eloss_timesteps.py  plot_poteng_vs_dt.py  process_eloss.py  symm_corr_test.py
sim_info/: 4HSiC.json  Al2O3.json
src/: __init__.py  defexp.py  eloss.py  relax.py  thermal.py  thresholds.py
